--- a/ChromiumWPF/MainWindow.xaml
+++ b/ChromiumWPF/MainWindow.xaml
@@ -31,33 +31,39 @@
             <cefSharp:ChromiumWebBrowser Name="defaultBrowser" Address="localhost:5500/index.html" />
             <GroupBox Width="500" HorizontalAlignment="Right">
                 <StackPanel x:Name="actionStack" Visibility="Collapsed">
+                    
                     <Label x:Name="actionLabel" FontSize="30" Foreground="White" HorizontalAlignment="Center"></Label>
+                    
                     <StackPanel x:Name="pointStack" Visibility="Collapsed">
                         <TextBlock FontSize="15" Foreground="White">Longitude</TextBlock>
-                        <TextBox x:Name="longitudeTextbox"/>
+                        <TextBox x:Name="longitudeTextbox" KeyDown="NextField"/>
                         <TextBlock FontSize="15" Foreground="White">Latitude</TextBlock>
-                        <TextBox x:Name="latitudeTextbox"/>
+                        <TextBox x:Name="latitudeTextbox" KeyDown="NextField"/>
                         <TextBlock FontSize="15" Foreground="White">Height</TextBlock>
-                        <TextBox x:Name="heightTextbox"/>
+                        <TextBox x:Name="heightTextbox" KeyDown="NextField"/>
                         <TextBlock x:Name="urlTextblock" FontSize="15" Foreground="White">Url</TextBlock>
-                        <TextBox x:Name="urlTextbox"/>
+                        <TextBox x:Name="urlTextbox" KeyDown="NextField"/>
                     </StackPanel>
+                    
                     <StackPanel x:Name="lineStack" Visibility="Collapsed">
                         <TextBlock FontSize="15" Foreground="White">Source point</TextBlock>
-                        <TextBox x:Name="srcPointXTextbox"/>
-                        <TextBox x:Name="srcPointYTextbox"/>
+                        <TextBox x:Name="srcPointXTextbox" KeyDown="NextField"/>
+                        <TextBox x:Name="srcPointYTextbox" KeyDown="NextField"/>
                         <TextBlock FontSize="15" Foreground="White">Destination point</TextBlock>
-                        <TextBox x:Name="dstPointXTextbox"/>
-                        <TextBox x:Name="dstPointYTextbox"/>
+                        <TextBox x:Name="dstPointXTextbox" KeyDown="NextField"/>
+                        <TextBox x:Name="dstPointYTextbox" KeyDown="NextField"/>
                         <TextBlock FontSize="15" Foreground="White">Width</TextBlock>
-                        <TextBox x:Name="widthTextbox"/>
+                        <TextBox x:Name="widthTextbox" KeyDown="NextField"/>
                     </StackPanel>
+                    
                     <StackPanel x:Name="polygonStack" Visibility="Collapsed">
                         <Button Width="50" Height="50" FontSize="30" Click="AddPointInput">+</Button>
                         <TextBlock FontSize="15" Foreground="White">Height</TextBlock>
-                        <TextBox x:Name="polygonHeightTextbox"/>
+                        <TextBox x:Name="polygonHeightTextbox" KeyDown="NextField"/>
                     </StackPanel>
+
                     <Button Width="100" Height="50" FontSize="20" Background="Lime" Margin="0, 20" Click="Approve">Approve</Button>
+                    
                 </StackPanel>
             </GroupBox>
         </Grid>
