--- a/ChromiumWPF/MainWindow.xaml
+++ b/ChromiumWPF/MainWindow.xaml
@@ -22,6 +22,7 @@
                     <MenuItem Header="Add polygon" Click="ChooseAction"></MenuItem>
                     <MenuItem Header="Add image" Click="ChooseAction"></MenuItem>
                     <MenuItem Header="Create model" Click="ChooseAction"></MenuItem>
+                    <MenuItem Header="Load structure model" Click="ChooseAction"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="Mode switch" Width="100" Height="30" Background="Gray" Click="ModeSwitch"/>
             </Menu>
@@ -62,6 +63,11 @@
                         <TextBox x:Name="polygonHeightTextbox" KeyDown="NextField"/>
                     </StackPanel>
 
+                    <StackPanel x:Name="urlStack" Visibility="Collapsed">
+                        <TextBlock FontSize="15" Foreground="White">Url</TextBlock>
+                        <TextBox x:Name="urlStackTextbox" Tag="LastInStack" KeyDown="NextField"/>
+                    </StackPanel>
+                    
                     <Button Width="100" Height="50" FontSize="20" Background="Lime" Margin="0, 20" Click="Approve">Approve</Button>
                     
                 </StackPanel>
