--- a/ChromiumWPF/MainWindow.xaml
+++ b/ChromiumWPF/MainWindow.xaml
@@ -5,15 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChromiumWPF"
         xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-        xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" WindowState="Maximized">
-    
-    <!--variable "peerHtmlPath" houlds path to index.html-->
-    <Window.Resources>
-        <System:String x:Key="peerHtmlPath">file:///C:/msys64/home/ITAMARBI/WPF_Chromium/my-gst-webrtc/js/index.html</System:String>
-    </Window.Resources>
-
     <Grid Background="{DynamicResource wbBackground}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -63,7 +56,7 @@
                 <Label x:Name="actionLabel" FontSize="30" Foreground="White" HorizontalAlignment="Center"/>
 
                 <StackPanel x:Name="pointStack" Visibility="Collapsed">
-                    <TextBlock FontSize="15" Foreground="White"><Run Text="Id"/></TextBlock>
+                    <TextBlock x:Name="pointIdText" FontSize="15" Foreground="White"><Run Text="Id"/></TextBlock>
                     <TextBox x:Name="pointIdTextbox" KeyDown="NextField"/>
                     <TextBlock FontSize="15" Foreground="White"><Run Text="Longitude"/></TextBlock>
                     <TextBox x:Name="longitudeTextbox" KeyDown="NextField"/>
@@ -123,37 +116,36 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            
 
             <Grid Grid.Row="0" Grid.Column="0">
-                <cefSharp:ChromiumWebBrowser Name="browser00" Address="https://192.168.136.136:8443/"/>
+                <cefSharp:ChromiumWebBrowser Name="browser00" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="0" Grid.Column="1">
-                <cefSharp:ChromiumWebBrowser Name="browser01" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser01" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="0">
-                <cefSharp:ChromiumWebBrowser Name="browser10" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser10" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="1">
-                <cefSharp:ChromiumWebBrowser Name="browser11" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser11" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="0">
-                <cefSharp:ChromiumWebBrowser Name="browser20" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser20" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="1">
-                <cefSharp:ChromiumWebBrowser Name="browser21" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser21" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="3" Grid.Column="0">
-                <cefSharp:ChromiumWebBrowser Name="browser30" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser30" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="3" Grid.Column="1">
-                <cefSharp:ChromiumWebBrowser Name="browser31" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser31" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="4" Grid.Column="0">
-                <cefSharp:ChromiumWebBrowser Name="browser40" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser40" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
             <Grid Grid.Row="4" Grid.Column="1">
-                <cefSharp:ChromiumWebBrowser Name="browser41" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser41" Address="file:///C:/Users/bendery/Desktop/WPF_Chromium/my-gst-webrtc/js/index.html"/>
             </Grid>
 
         </Grid>
