--- a/ChromiumWPF/MainWindow.xaml
+++ b/ChromiumWPF/MainWindow.xaml
@@ -10,10 +10,14 @@
         Title="MainWindow" Height="450" Width="800" WindowState="Maximized">
 
 
-    <!--variable "peerHtmlPath" houlds path to index.html-->
+    <!--variable "peerHtmlPath" houlds path to index.html"
+        variable "signallingServerUrl" has to be https to accept self-signed certificate
+        change values if needed-->
     <Window.Resources>
         <System:String x:Key="peerHtmlPath">file:///C:/msys64/home/ITAMARBI/WPF_Chromium/my-gst-webrtc/js/index.html</System:String>
+        <System:String x:Key="signallingServerUrl">https://192.168.136.138:8443/</System:String>
     </Window.Resources>
+
 
     <Grid Background="{DynamicResource wbBackground}">
         <Grid.RowDefinitions>
@@ -114,6 +118,7 @@
         <Grid Grid.Row="1" Grid.Column="0" Background="White">
 
             <Grid.RowDefinitions>
+                <RowDefinition Height="0*" />       <!-- invisible row for browser00-->
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
@@ -125,12 +130,10 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-
+                      
+            <!-- browser00 is used to accept self-signed certificate of signalling server-->
             <Grid Grid.Row="0" Grid.Column="0">
-                <cefSharp:ChromiumWebBrowser Name="browser00" Address="{StaticResource peerHtmlPath}"/>
-            </Grid>
-            <Grid Grid.Row="0" Grid.Column="1">
-                <cefSharp:ChromiumWebBrowser Name="browser01" Address="{StaticResource peerHtmlPath}"/>
+                <cefSharp:ChromiumWebBrowser Name="browser00" Visibility="Hidden" Address="{StaticResource signallingServerUrl}"/>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="0">
                 <cefSharp:ChromiumWebBrowser Name="browser10" Address="{StaticResource peerHtmlPath}"/>
@@ -155,6 +158,12 @@
             </Grid>
             <Grid Grid.Row="4" Grid.Column="1">
                 <cefSharp:ChromiumWebBrowser Name="browser41" Address="{StaticResource peerHtmlPath}"/>
+            </Grid>
+            <Grid Grid.Row="5" Grid.Column="0">
+                <cefSharp:ChromiumWebBrowser Name="browser50" Address="{StaticResource peerHtmlPath}"/>
+            </Grid>
+            <Grid Grid.Row="5" Grid.Column="1">
+                <cefSharp:ChromiumWebBrowser Name="browser51" Address="{StaticResource peerHtmlPath}"/>
             </Grid>
         </Grid>
     </Grid>
